--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
+    "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "postcss": "^8.5.6",
     "react": "19.1.0",
